--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react-slick": "^0.23.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^0.85.0"
+    "semantic-ui-react": "^0.85.0",
+    "axios": "^0.18.0",
+    "npm-run-all": "^4.1.5",
+    "react-redux": "^6.0.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
@@ -33,10 +36,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "axios": "^0.18.0",
     "node-sass-chokidar": "^1.3.4",
-    "npm-run-all": "^4.1.5",
-    "react-redux": "^6.0.0",
     "react-thunk": "^1.0.0"
   }
 }
