--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "semantic-ui-react": "^0.85.0",
     "axios": "^0.18.0",
     "npm-run-all": "^4.1.5",
-    "react-redux": "^6.0.0"
+    "react-redux": "^6.0.0",
+    "node-sass-chokidar": "^1.3.4"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
@@ -34,9 +35,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "node-sass-chokidar": "^1.3.4",
-    "react-thunk": "^1.0.0"
-  }
+  ]
 }
