--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "google-maps-react": "^2.0.2",
+    "jsonp": "^0.2.1",
     "node-sass": "^4.11.0",
+    "node-sass-chokidar": "^1.3.4",
+    "npm-run-all": "^4.1.5",
+    "query-string": "^6.3.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-slick": "^0.23.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^0.85.0",
-    "axios": "^0.18.0",
-    "npm-run-all": "^4.1.5",
-    "react-redux": "^6.0.0",
-    "node-sass-chokidar": "^1.3.4"
+    "semantic-ui-react": "^0.85.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
